@@ -12,6 +12,9 @@ What's New in Python 3.2 Alpha 2?
 Core and Builtins
 -----------------
 
+- Issue #9212: dict_keys and dict_items now provide the isdisjoint()
+  method, to conform to the Set ABC.
+
 - Issue #9737: Fix a crash when trying to delete a slice or an item from
   a memoryview object.
 
